--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.3.2",
+    "javascript-time-ago": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-time-ago": "^6.2.2",
     "react-twitter-embed": "^3.0.3",
     "web-vitals": "^1.1.1"
   },
